--- a/main.css
+++ b/main.css
@@ -1,15 +1,12 @@
+body {
+  background-color: #444!important;
+}
 .logo-img{
   width: 50%!important;
   height: 50% !important;
   display: block;
   margin-left: auto;
   margin-right: auto
-}
-
-.comments{
-  margin-left: auto;
-  margin-right: auto;
-  width: 6em
 }
 
 .textWrap{
@@ -46,7 +43,7 @@
   float: left;
   font-size: 20px;
   margin: 10px;
-  color: #777;
+  color: #DADADA;
   font-family: cursive;
   font-weight: bold;
  }
@@ -59,19 +56,101 @@
   padding: 14px 10px;
   border-right: 1px solid #CCC;
   border-left: 1px solid #CCC;
+  color: #DADADA;
+}
+.footer {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+}
+.container {
+  padding-top: 50px;
+  background: #D9D9D9;
+}
+.video-head {
+  background: #C5C5C5;
+  border-top: 1px solid #777;
+  border-bottom: 1px solid #777; 
+}
+  .video-head h2.video-name {
+    color: #444;
+    float: left;
+    margin-top: 20px;
+  }
+  .video-head .rating {
+    float: left;
+    margin-top: 30px;
+    margin-left: 20px;
+  }
+  .up {
+    width: 40px;
+    height: 40px;
+    float: left;
+  }
+  .down {
+    width: 40px;
+    height: 40px;
+    float: left;
+  }
+  .user-info {
+
+    float: right;
+  }
+
+  .user-avatar {
+
+    float: right; 
+    margin-right: 10px;
+    margin-top: 1px;
+    margin-bottom: 2px;
+   
+  }
+
+  .user-avatar img {
+
+    height: 55px;
+    width: 50px;
+  }
+
+
+.play-video {
+
+    margin-left: 10px;
+    margin-top: 10px;
+}
+  
+  .comment-video {
+
+    margin-left: 40px;
+    margin-top: 10px;
+  }
+.comments {
+  clear: both;
+  overflow: hidden;
+  background: #E9E9E9;
+  border: 1px solid #CCC;
+  margin: 5px 5px 0px;
+}
+.user-img {
+  float: left;
+  background-color: white;
+  border: 3px solid #FFF;
+  margin: 5px;
+}
+.user-comment {
+  float: left;
+  margin: 5px;
+  font-size: 12px;
 }
 
+  .user-comment .comment-from {
+    margin: 5px;
+    font-weight: bold;
+  }
 
-
-
-
-
-
-
-
-
-
-
+  .user-comment  .comment-body {
+     margin: 5px;
+  }
 
 
 
